--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   ],
   "dependencies": {
     "clapp": "^0.2.0",
-    "discord.js": "^10.0.1"
+    "discord.js": "^10.0.1",
+    "got": "^6.5.0"
   },
   "scripts": {
     "bot": "node ./lib/index.js",
@@ -30,11 +31,11 @@
     "gulp": "^3.9.0",
     "gulp-eslint": "^3.0.1",
     "gulp-exclude-gitignore": "^1.0.0",
-    "gulp-line-ending-corrector": "^1.0.1",
     "gulp-istanbul": "^1.0.0",
+    "gulp-line-ending-corrector": "^1.0.1",
     "gulp-mocha": "^3.0.1",
-    "gulp-plumber": "^1.0.0",
-    "gulp-nsp": "^2.1.0"
+    "gulp-nsp": "^2.1.0",
+    "gulp-plumber": "^1.0.0"
   },
   "eslintConfig": {
     "extends": "xo-space",
