Improve discord formatting

--- a/config.js.template
+++ b/config.js.template
@@ -7,7 +7,7 @@ module.exports = {
   // The bot's command prefix. The bot will recognize as command any message that begins with it.
   // i.e: "-sam-ranking foo" will trigger the command "foo",
   //      whereas "SAM-ranking foo" will do nothing at all.
-  prefix:  "!",
+  prefix:  "!ranking",
 
   // Your bot's user token. If you don't know what that is, go here:
   // https://discordapp.com/developers/applications/me
@@ -21,7 +21,7 @@ module.exports = {
   // MANAGE_MESSAGES - 	0x00002000
   // More info: https://discordapp.com/developers/docs/topics/permissions
   deleteAfterReply: {
-    enabled: true,
+    enabled: false,
     time: 10000, // In milliseconds
   }
 };
